--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,50 +1,100 @@
 /* mainVisual */
 #mainVisual {
-    width: 100%;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
-#mainVisual h1 {
-    text-align: center;
-    font-size: 15px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-.outer {
-    border: 6px solid #999;
-    width: 800px;
-    height: 120px;
-    margin: 0 auto;
-    overflow-x: hidden;
-}
-.outer .list {
+.slide {
     display: flex;
-    transition: .3s ease-out;
-    height: 100%;
-    border: 6px solid #777;
-}
+    flex-wrap: nowrap;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    user-select: none;
+  }
+  .slide_item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    left: 0px;
+    width: 100%;
+    height: 300px;
+    flex-shrink: 0;
+    transition: left 0.15s;
+  }
+  .slide_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: calc(50% - 16px);
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+    background-color: #cccc;
+    cursor: pointer;
+  }
+  
+  .slide_prev_button {
+    left: 10px;
+  }
+  .slide_next_button {
+    right: 10px;
+  }
+  
+  /* 각 슬라이드가 변경되는 것을 시각적으로 확인하기 쉽도록 각 슬라이드별 색상 적용 */
+  .slide_item.item1 {
+    background-color: darkgoldenrod;
+  }
+  .slide_item.item2 {
+    background-color: aqua;
+  }
+  .slide_item.item3 {
+    background-color: blueviolet;
+  }
+  .slide_item.item4 {
+    background-color: burlywood;
+  }
+  .slide_item.item5 {
+    background-color: cornflowerblue;
+  }
+  
+  /* 페이지 바로가기 */
+  ul,
+  li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  .slide_pagination {
+    display: flex;
+    gap: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .slide_pagination > li {
+    color: #7fb5ff88;
+    cursor: pointer;
+    font-size: 25px;
+  }
+  .slide_pagination > li.active {
+    color: #7fb5ff;
+  }
+  
+  .slide_item_duplicate {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    left: 0px;
+    width: 100%;
+    height: 300px;
+    flex-shrink: 0;
+    transition: left 0.15s;
+  }
 
-.list .inner {
-    padding: 0 16px;
-}
 
-.buttonList {
-    margin-top: 10px;
-    text-align: center;
-}
-.buttonList button {
-    background: none;
-    font-weight: 600;
-    font-size: 14px;
-    transition: 0.3s;
-    border-radius: 3px;
-}
-.buttonList button:last-child {
-    margin-left: 10px;
-}
-.buttonList button:hover {
-    background: #333;
-    color: #fff;
-}
 
 /* main */
 #container {}
@@ -111,3 +161,5 @@
     background-color: #ededed;
     border: 1px solid #333;
 }
+
+
