--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -74,7 +74,7 @@ table {
 /* header */
 #header {
 	position: relative;
-	background: #ededed;
+	background: #777;
 	margin-bottom: 16px;
 }
 #header .inner {
@@ -84,6 +84,10 @@ table {
 	position: absolute;
 	top: 3px;
 	left: 10px;
+
+	color: #fff; 
+	text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, /* Green glow */ 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+	animation: flicker 1.5s infinite alternate;
 }
 #header h1 a {
 	font-size: 25px;
@@ -106,6 +110,8 @@ table {
 #header .loginWrap .log {}
 #header .loginWrap .log li {
 	float: left;
+	color: #fff; 
+	text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, /* Green glow */ 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
 }
 #header .loginWrap .log li:last-child {
 	margin-left: 8px;
@@ -114,6 +120,7 @@ table {
 	font-size: 15px;
 	font-weight: 500;
 	transition: 0.2s;
+	animation: flicker 1.5s infinite alternate;
 }
 #header .loginWrap .log li a:hover {
 	font-weight: 600;
@@ -132,4 +139,21 @@ table {
 	font-size: 10px;
 }
 
-
+/* animation */
+@keyframes flicker {
+	0%,
+	18%,
+	22%,
+	25%,
+	53%,
+	57%,
+	100% {
+	  text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0fa,
+		0 0 80px #0fa, 0 0 90px #0fa, 0 0 100px #0fa, 0 0 150px #0fa;
+	}
+	20%,
+	24%,
+	55% {
+	  text-shadow: none;
+	}
+  }
