--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,8 @@
   height: 300px;
   flex-shrink: 0;
   transition: left 0.15s;
+  background: url(../images/rt.png);
+  background-repeat: repeat-x;
 }
 .slide_button {
   display: flex;
@@ -180,44 +182,64 @@ li {
 .main .postWrite .postBtnWrap {
   text-align: center;
   margin-top: 18px;
+  margin-bottom: 20px;
 }
 .main .postWrite .postBtnWrap .postBtn {
-  background: none;
-  transition: 0,3s;
+  background: #f2f2f2;
+  border: 1px solid #333;
+  padding: 8px;
+  font-size: 13px;
+  border-radius: 7px;
+  transition: 1.1s;
   font-weight: 600;
+  cursor: pointer;
 }
 .main .postWrite .postBtnWrap .postBtn:hover {
   background: #333;
   color: #fff;
 }
-.popWrap{
-  position: fixed;
-  top:0; left:0; right:0; bottom:0; 
-  background: rgba(0,0,0,.5); 
-  font-size: 0; 
-  text-align: center;
-}
-.popWrap:after{
-  display:inline-block; 
-  height:100%; 
-  vertical-align:middle; 
-  content:'';
-}
-.popWrap .inner{
-  display:inline-block; 
-  padding:20px 30px; 
-  background:#fff; 
-  width:200px; 
-  vertical-align:middle; 
-  font-size:15px;
-  border: 2px solid #333;
-  border-radius: 10px;
-  margin-top: 500px;
-}
-.main .popWrap form {}
 
-.main .popWrap .btnGo {}
-.main .popWrap .btnGo:hover {}
-.main .popWrap .btnClose {}
-.main .popWrap .btnClose:hover {}
+/* popup css */
+.postWrap{
+  text-align: center;
+  margin-top: 50px;
+}
+.postWrap form {}
+.postWrap form .formGroup {
+  margin-bottom: 10px;
+}
+.postWrap form .label {
+  font-weight: 600;
+  font-size: 11px;
+}
+.postWrap form .formControl {
+  border: 2px solid #333;
+  border-radius: 5px;
+}
+
+.postWrap .postBtnWrap {
+  margin-top: 10px;
+}
+
+.postWrap .btnGo {
+  margin-right: 5px;
+  transition: 0.3s;
+  background: #fff;
+  font-weight: 600;
+  border-radius: 10px;
+}
+.postWrap .btnGo:hover {
+  background: #333;
+  color: #fff;
+}
+.postWrap .btnClose {
+  transition: 0.3s;
+  background: #fff;
+  font-weight: 600;
+  border-radius: 10px;
+}
+.postWrap .btnClose:hover {
+  background: #333;
+  color: #fff;
+}
 
